[gd_scene load_steps=11 format=3 uid="uid://cx5vl7c3gps0n"]

[ext_resource type="Script" uid="uid://dhv55we4dqoav" path="res://workstations/coffee_maker.gd" id="1_0n7hs"]
[ext_resource type="PackedScene" uid="uid://pu6ebmrp5rxn" path="res://map/map_placeables/coffee_brewer.blend" id="2_jd0cl"]
[ext_resource type="Texture2D" uid="uid://20xdd5h4oe5i" path="res://ingredients/needs_water.png" id="3_uyjwf"]
[ext_resource type="Texture2D" uid="uid://b3ncbc5od4dfj" path="res://ingredients/needs_coffee.png" id="4_ip17r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4r82i"]
size = Vector3(2.40625, 0.14477539, 2.0861816)

[sub_resource type="BoxShape3D" id="BoxShape3D_lqt5c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ip17r"]
transparency = 1
albedo_color = Color(0.336, 0.6271999, 0.7, 0.18431373)

[sub_resource type="SphereMesh" id="SphereMesh_lv46e"]
material = SubResource("StandardMaterial3D_ip17r")
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lv46e"]
albedo_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ip17r"]
material = SubResource("StandardMaterial3D_lv46e")
size = Vector3(0.75, 0.1, 0.75)

[node name="CoffeeMaker" type="Node3D"]
script = ExtResource("1_0n7hs")

[node name="MakingCoffeeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PlayerServiceArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerServiceArea"]
shape = SubResource("BoxShape3D_4r82i")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_lqt5c")

[node name="CoffeeCupPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0046976507, 0.16766495, 0.33817285)

[node name="coffee_brewer" parent="." instance=ExtResource("2_jd0cl")]
transform = Transform3D(-8.742278e-08, 0, -2, 0, 2, 0, 2, 0, -8.742278e-08, 0.48310232, 0.03576511, 0)

[node name="NeedsWaterSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.51039445, 1.2893803, 0)
pixel_size = 0.005
billboard = 1
fixed_size = true
texture_filter = 0
texture = ExtResource("3_uyjwf")

[node name="NeedsCoffeeSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.522388, 1.2893803, 0)
pixel_size = 0.005
billboard = 1
fixed_size = true
texture_filter = 0
texture = ExtResource("4_ip17r")

[node name="BrewingParticles" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14160103, 0.50051415, -0.021591723)
emitting = false
lifetime = 0.5
randomness = 0.22
lifetime_randomness = 0.71
mesh = SubResource("SphereMesh_lv46e")
spread = 106.24
gravity = Vector3(0, 3, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.2

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.037389994, 0, 0.13182268)
mesh = SubResource("BoxMesh_ip17r")

[connection signal="timeout" from="MakingCoffeeTimer" to="." method="_on_making_coffee_timer_timeout"]
[connection signal="body_entered" from="PlayerServiceArea" to="." method="_on_player_service_area_body_entered"]
[connection signal="body_exited" from="PlayerServiceArea" to="." method="_on_player_service_area_body_exited"]
